<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="edit">edit</string>

    <!-- FLAT DETAIL -->
    <string name="euro">%1$d €</string>
    <string name="metre_carre">%1$d m&#178;</string>
    <string name="location">Location</string>
    <string name="no_related_flat">No related flat</string>
    <string name="info">Information</string>
    <string name="description">Description *</string>
    <string name="description_text">%1$s\n</string>
    <string name="surface">Surface</string>

    <!-- FLAT ADD ACTIVITY -->
    <string name="title_edit_flat_presentation">Flat presentation</string>
    <string name="title_edit_flat_address">Flat address</string>
    <string name="title_edit_flat_poi">Around the flat</string>
    <string name="title_edit_flat_agent">Responsible agent</string>

    <string name="flat_type">Flat type</string>
    <string name="summary">Summary *</string>
    <string name="flat_description">Description *</string>
    <string name="surface_form">Surface (m&#178;) *</string>
    <string name="bedroom">Bedrooms</string>
    <string name="room">Rooms</string>
    <string name="bathroom">Bathrooms</string>
    <string name="price">Price (€) *</string>
    <string name="street_nb">Street number</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City *</string>

    <string name="edit_price"><i>Enter price&#8230;</i></string>
    <string name="edit_street_nb"><i>Enter street number&#8230;</i></string>
    <string name="edit_summary"><i>Enter summary&#8230;</i></string>
    <string name="edit_description"><i>Enter description&#8230;</i></string>
    <string name="edit_city"><i>Enter city&#8230;</i></string>
    <string name="edit_steeet"><i>Enter street name&#8230;</i></string>
    <string name="edit_surface"><i>Enter surface&#8230;</i></string>
    <string name="edit_room"><i>Enter rooms number&#8230;</i></string>
    <string name="edit_bedroom"><i>Enter bedrooms number&#8230;</i></string>
    <string name="edit_bathroom"><i>Enter bathrooms nb&#8230;</i></string>
    <string name="edit_postal_code"><i>Enter postal code&#8230;</i></string>

    <string name="school">Schools</string>
    <string name="restaurant">Restaurants</string>
    <string name="post_office">Post offices</string>
    <string name="theater">Theaters</string>
    <string name="shop">Shopping centers</string>
    <string name="flat_agent">Agent</string>

    <string name="addFlat">Add a flat</string>
    <string name="mandatory_information">*  =  mandatory field</string>
    <string name="btn_add_label">Add a flat</string>
    <string name="flat_saved">Flat has been saved in database.</string>
    <string name="invalid_form">WARNING :\nThe fields Summary, Description, Surface, \nPrice and City can\'t be empty.</string>
    <string name="editFlat">Edit a flat</string>
    <string name="flat_updated">Flat has been updated in database</string>
    <string name="title_edit_pics">Pictures</string>
    <string name="photo_caption">Caption</string>
    <string name="caption">Caption</string>
    <string name="edit_caption">Caption&#8230;</string>
    <string name="new_photo">Add photo</string>
    <string name="invalid_caption">Please enter a caption first.</string>
    <string name="permissions_issue">You need permissions first.</string>
    <string name="add_photo">Add photo \"%1$s\"</string>
    <string name="no_picture_selected">No picture selected</string>
    <string name="picture_saved">Photo saved</string>
    <string name="is_it_sold">Sold ?</string>
    <string name="sold">Sold</string>
    <string name="big_sold">SOLD !</string>
    <string name="sold_date">SOLD on %1$s</string>
    <string name="available_date">ON SALE from %1$s</string>
    <string name="warning_removal_not_saved">Don\'t forget to save the flat.</string>
    <string name="notification_title">New Flat recorded</string>
    <string name="notification_text">%1$s</string>
    <string name="channel_name" translatable="false">notification_channel</string>
    <string name="channel_description" translatable="false">Notification channel</string>
    <string name="pic_deleted">Pic deleted</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="title_filter">Filters</string>
    <string name="title_filter_poi">Searching a flat close to&#8230;</string>
    <string name="min">Min&#8230;</string>
    <string name="max">Max&#8230;</string>
    <string name="filter_city">In this city&#8230;</string>
    <string name="title_filter_sale">Searching for sale status&#8230;</string>
    <string name="on_sale_filter_title">\"On sale\" only</string>
    <string name="sold_filter_title">\"Sold\" only</string>
    <string name="available_date_filter">Available date *</string>
    <string name="sold_date_filter">Sold date *</string>
    <string name="date_filter">DD/MM/YYYY</string>
    <string name="date_filter_max">Before&#8230;</string>
    <string name="date_filter_min">After&#8230;</string>
    <string name="warning_date">* Format for date is "DD/MM/YYYY"</string>
    <string name="city_filter">City</string>
    <string name="price_filter">Price</string>
    <string name="warning_wrong_form">Some fields of the \"Searching for sale status&#8230;\" were inacurrately filled.\nPlease double-check.</string>
    <string name="search_result">This is the result of your search.</string>
    <string name="previous_search_result">This is the result of your previous search.</string>
    <string name="back_to_full_listing">Back to the full list</string>
    <string name="search_title">Search</string>
    <string name="warning_no_filter_filled">You didn\'t make\\nany filter selection.</string>
    <string name="loan">Loan</string>
    <string name="contribution">Contribution (€)</string>
    <string name="loan_calculation">Loan calculation</string>
    <string name="rate">Rate (%)</string>
    <string name="hint_contribution">Enter contribution&#8230;</string>
    <string name="hint_rate">Enter rate&#8230;</string>
    <string name="duration">Duration (years)</string>
    <string name="hint_duration">Enter duration&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="loan_result">Your mensuality will be of\n <b>%1$d €</b>\n during <b>%2$d</b> years.</string>
    <string name="close">Close</string>
    <string name="warning_wrong_contribution">Lucky you !\nYou got the money !</string>
    <string name="warning_wrong_information">Something is going wrong here !\nCheck your value &amp; try again !</string>
    <string name="take_picture">Take picture</string>
    <string name="gallery">Choose from gallery</string>
    <string name="btn_add_description">Add button</string>

    <string name="flattype1">Flat</string>
    <string name="flattype2">Duplex</string>
    <string name="flattype3">House</string>
    <string name="flattype4">Loft</string>
    <string name="flattype5">Basement duplex</string>
    <string name="flattype6">Triplex</string>

    <string-array name="flat_type">
        <item>flattype1</item>
        <item>flattype2</item>
        <item>flattype3</item>
        <item>flattype4</item>
        <item>flattype5</item>
        <item>flattype6</item>
    </string-array>

    <string-array name="flat_agent">
        <item>Marc Antoine</item>
        <item>Agnès Isard</item>
        <item>Naïma Lassim</item>
        <item>Pierre Martin</item>
        <item>Roger Dumont</item>
        <item>Abdel Malat</item>
    </string-array>
</resources>
