<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/flat_presentation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:elevation="10dp"
        android:stretchColumns="*">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/title_size_max"
            android:textStyle="bold"
            android:textColor="@color/pink"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/city"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"/>

    </TableRow>

    <!--<androidx.recyclerview.widget.RecyclerView-->
    <!--android:id="@+id/fragment_flat_images_recycler_view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="200dp">-->
    <!--</androidx.recyclerview.widget.RecyclerView>-->

    <ScrollView
        android:id="@+id/flat_scrollview_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/flat_status"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flat_presentation"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:gravity="center"
                android:padding="@dimen/basic_padding"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/flat_pics_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_recycler_height"
                android:background="@color/dark_grey" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/flat_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/middle_padding"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/description_text"
                android:textSize="@dimen/title_size_mini" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:gravity="center"
                android:padding="@dimen/basic_padding"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />
            <TableLayout
                android:id="@+id/flat_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/basic_padding">
                <TableRow android:padding="@dimen/basic_padding">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_surface"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/surface"
                        android:textSize="@dimen/title_size_mini" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/surface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/title_size_mini"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_home"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/room"
                        android:textSize="@dimen/title_size_mini" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/room_nb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/title_size_mini"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_bathroom"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/bathroom"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/bathroom_nb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/title_size_mini"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_bedroom"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/bedroom"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/bedroom_nb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="@dimen/title_size_mini"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_poi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:gravity="center"
                android:padding="@dimen/basic_padding"
                android:text="@string/title_edit_flat_poi"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />
            <TableLayout
                android:id="@+id/flat_poi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/basic_padding">
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_school"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/school"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/school"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:src="@drawable/ic_ok"
                        android:contentDescription="@string/school" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_post"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/post_office"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/post"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:src="@drawable/ic_ko"
                        android:contentDescription="@string/post_office" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_restaurant"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/restaurant"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:src="@drawable/ic_ok"
                        android:contentDescription="@string/restaurant" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_theater"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/theater"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/theater"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:src="@drawable/ic_ok"
                        android:contentDescription="@string/theater" />
                </TableRow>
                <TableRow android:padding="@dimen/basic_padding">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_shop"
                        android:drawablePadding="@dimen/basic_padding"
                        android:gravity="center_vertical"
                        android:text="@string/shop"
                        android:textSize="@dimen/title_size_mini" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/shop"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/middle_padding"
                        android:gravity="center_vertical|start"
                        android:src="@drawable/ic_ko"
                        android:contentDescription="@string/shop" />
                </TableRow>
            </TableLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:gravity="center"
                android:padding="@dimen/basic_padding"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/flat_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_height"
                android:layout_weight="1"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/basic_padding"
                    android:textSize="@dimen/title_size" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/map_height"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_map" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@+id/flat_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/basic_padding"
        android:stretchColumns="*">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/available_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sale_agent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textStyle="italic|bold" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>
